--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,77 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PhotogramAuth</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
+  <title>
+    PhotogramAuth
+  </title>
+
+  <%= render "shared/bootstrapcdn_assets" %>
+
   <%= csrf_meta_tags %>
   
-  <!-- Expand the number of characters we can use in the document beyond basic ASCII 🎉 -->
-    <meta charset="utf-8">
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css" />
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
+  <script src="//maps.google.com/maps/api/js?v=3.24&key=AIzaSyCOTPWiuvyyo6sKoIBzKA4-1ol-vTOIOlM"></script>
+  <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 
-    <!-- Connect Font Awesome CSS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.2/css/all.css">
 
-    <!-- Connect Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-
-    <!-- Connect Bootstrap JavaScript and its dependencies -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-
-    <!-- Make it responsive to small screens -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta charset="utf-8">
+  <style>
+    body { padding-bottom: 70px }
+  </style>
 </head>
+
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">PhotogramAuth</a>
+  <%= render "shared/navbar" %>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item"><a class="nav-link" href="/users">All Users</a></li>
-          <li class="nav-item"><a class="nav-link" href="/photos">All Posts</a></li>
-          <li class="nav-item"><a class="nav-link" href="/my_likes">My Likes</a></li>
-        </ul>
+  <div class="container">
+    <%= render "shared/flashes" %>
 
-        <ul class="navbar-nav">
-          <% if current_user==nil %>
-            <li class="nav-item">
-              <a href="/users/sign_in" class="nav-link" >
-                Login
-              </a>
-            </li>
-            
-              <li class="nav-item">
-                <a href="/users/sign_up" class="nav-link" >
-                  Create Account
-                </a>
-              </li>
-          <% else %>
-            <li class="nav-item">
-              <a href="/users/edit" class="nav-link" >
-                <%= current_user.username %>
-              </a>
-            </li>
-            
-            <li class="nav-item">
-              <a href="/users/<%=current_user.id%>" class="nav-link">
-                My Wall
-              </a>
-            </li>
-  
-            <li class="nav-item">
-              <a href="/users/sign_out" data-method="delete" class="nav-link">
-                Sign Out
-              </a>
-            </li>
-          <%end%>
-        </ul>
-      </div>
-    </nav>
-  
-  <%= yield %>
-  <%= dev_tools if Rails.env.development? %>
+    <%= yield %>
+  </div>
+
 </body>
 </html>
