--- a/app/views/photo_templates/new_form.html.erb
+++ b/app/views/photo_templates/new_form.html.erb
@@ -22,22 +22,18 @@
 
     <input type="text" id="image" name="image" class="form-control">
   </div>
-
-  <div class="form-group">
-    <label for="user_id">
-      User
-    </label>
-
-    <input type="text" id="user_id" name="user_id" class="form-control">
-  </div>
+  
+    <!--hidden input for user id-->
+    <input type="hidden" name="user_id" value="<%=current_user.id%>">
+  
 
   <button class="btn btn-block btn-outline-secondary">
     Create photo
   </button>
+  <a href="/photos">
+  Cancel
+  </a>
 </form>
 
 <hr>
 
-<a href="/photos">
-  Go back
-</a>
