--- a/app/views/user_templates/show.html.erb
+++ b/app/views/user_templates/show.html.erb
@@ -1,1 +1,18 @@
-Show photos of users
+<div class="jumbotron col-md-8 offset-md-2"><h3><%=@user.username%></h3></div>
+<div class="col-md-8 offset-md-2"><a href="photos/new" class="btn btn-primary btn-block">Add Photo</a></div>
+
+<div class="card col-md-8 offset-md-2">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap">
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Dapibus ac facilisis in</li>
+    <li class="list-group-item">Vestibulum at eros</li>
+  </ul>
+  <div class="card-body">
+    <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+  </div>
+</div>
