My_likes page done (point 19)

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,8 +23,8 @@
               Photos
             </a>
             
-            <a href="/likes" class="dropdown-item">
-              Likes
+            <a href="/my_likes" class="dropdown-item">
+              My Likes
             </a>
             <% if current_user!= nil%>
             <a href="/users/<%=current_user.id%>" class="dropdown-item">
