--- a/app/views/like_templates/index.html.erb
+++ b/app/views/like_templates/index.html.erb
@@ -1,74 +1,28 @@
 <div class="row mb-3">
   <div class="col-md-12">
     <h1>
-      All likes
+      My likes
     </h1>
 
-    <a href="/likes/new" class="btn btn-block btn-outline-secondary">
+    <a href="/my_likes/new" class="btn btn-block btn-outline-secondary">
       Add a new like
     </a>
   </div>
 </div>
-
-
 <hr>
 
-<div class="row mb-3">
-  <div class="col-md-12">
-    <table class="table">
-      <tr>
-        <th>
-          ID
-        </th>
-
-        <th>
-          User
-        </th>
-
-        <th>
-          Photo
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-      <% @likes.each do |like| %>
-      <tr>
-        <td>
-          <%= like.id %>
-        </td>
-
-        <td>
-          <%= like.user_id %>
-        </td>
-
-        <td>
-          <%= like.photo_id %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(like.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(like.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/likes/<%= like.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
-      <% end %>
-    </table>
-  </div>
+<% current_user.likes.each do |like| %>
+<div class="card col-md-8 offset-md-2">
+    <div class="card-header">
+    <a href="/users/<%=Photo.find(like.photo_id).user_id%>"><%=User.find(Photo.find(like.photo_id).user_id).username%></a> <%=time_ago_in_words(like.created_at)%>
+    </div>
+    
+    <div class="card-body"></div>
+    <a href="/photos/<%=like.photo_id%>"><img src="<%=Photo.find(like.photo_id).image%>" class="img-fluid"></a> 
+    <% if Photo.find(like.photo_id).user_id==current_user.id%>
+        <a href="/photos/<%=like.photo_id%>/edit" class="btn btn-warning w-100">Edit</a>
+        <a href="delete_photo/<%=like.photo_id%>" class="btn btn-danger w-100">Delete</a>
+      <%end%>
+    </div>
 </div>
+<%end%>
