--- a/app/views/like_templates/show.html.erb
+++ b/app/views/like_templates/show.html.erb
@@ -6,13 +6,13 @@
 
     <div class="row mb-3">
       <div class="col">
-        <a href="/likes" class="btn btn-block btn-outline-secondary">
+        <a href="/my_likes" class="btn btn-block btn-outline-secondary">
           Go back
         </a>
       </div>
 
       <div class="col">
-        <a href="/likes/<%= @like.id %>/edit" class="btn btn-block btn-outline-secondary">
+        <a href="/my_likes/<%= @like.id %>/edit" class="btn btn-block btn-outline-secondary">
           Edit like
         </a>
       </div>
