--- a/app/views/photo_templates/show.html.erb
+++ b/app/views/photo_templates/show.html.erb
@@ -1,65 +1,23 @@
-<div class="row mb-3">
-  <div class="col-md-8 offset-md-2">
-    <h1>
-      Photo #<%= @photo.id %> details
-    </h1>
-
-    <div class="row mb-3">
-      <div class="col">
-        <a href="/photos" class="btn btn-block btn-outline-secondary">
-          Go back
-        </a>
-      </div>
-
-      <div class="col">
-        <a href="/photos/<%= @photo.id %>/edit" class="btn btn-block btn-outline-secondary">
-          Edit photo
-        </a>
-      </div>
-
-      <div class="col">
-        <a href="/delete_photo/<%= @photo.id %>" class="btn btn-block btn-outline-secondary">
-          Delete photo
-        </a>
-      </div>
+<div class="card col-md-8 offset-md-2 mb-4">
+    <div class="card-header">
+        <a href="/users/<%=Photo.find(@photo.user_id)%>"><%=User.find(Photo.find(@photo.user_id)).username%></a> <%=time_ago_in_words(@photo.created_at)%>
     </div>
-
-    <dl>
-      <dt>
-        Caption
-      </dt>
-      <dd>
-        <%= @photo.caption %>
-      </dd>
-
-      <dt>
-        Image
-      </dt>
-      <dd>
-        <%= @photo.image %>
-      </dd>
-
-      <dt>
-        User
-      </dt>
-      <dd>
-        <%= @photo.user_id %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@photo.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@photo.updated_at) %> ago
-      </dd>
-    </dl>
+    <div class="card-body"></div>
+    <a href="/photos/<%=@photo.id%>"><img src="<%=@photo.image%>" class="img-fluid"></a> 
+    <%if @photo.user_id==current_user.id%>
+      <a href="/photos/<%=@photo.id%>/edit" class="btn btn-warning w-100">Edit</a>
+      <a href="delete_photo/<%=@photo.id%>" class="btn btn-danger w-100">Delete</a>
+    <%end%>  
   </div>
 </div>
+
+
+
+  <div class="col-md-8 offset-md-2">
+    <a href="/photos" class="btn btn-block btn-outline-primary">
+      Go back
+    </a>
+  </div>
+
+
 
