--- a/app/views/user_templates/show.html.erb
+++ b/app/views/user_templates/show.html.erb
@@ -1,17 +1,19 @@
 <div class="jumbotron col-md-8 offset-md-2"><h3><%=@user.username%></h3></div>
 <div class="col-md-8 offset-md-2"><a href="photos/new" class="btn btn-primary btn-block">Add Photo</a></div>
 
-<div class="card col-md-8 offset-md-2">
+<%@user.photos.each do |photo|%>
+<div class="card col-md-8 offset-md-2 mb-4">
     <div class="card-header">
         <a href="/users/<%=@user.id%>"><%=@user.username%></a> <%=time_ago_in_words(@user.created_at)%>
     </div>
-    <%@user.photos.each do |photo|%>
+    
     <div class="card-body"></div>
     <a href="/photos/<%=photo.id%>"><img src="<%=photo.image%>" class="img-fluid"></a> 
     <h5 class="card-title">Special title treatment</h5>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <a href="/photos/<%=photo.id%>/edit" class="btn btn-warning w-100">Edit</a>
     <a href="delete_photo/<%=photo.id%>" class="btn btn-danger w-100">Delete</a>
-    <%end%>
+    
   </div>
 </div>
+<%end%>
