--- a/app/views/like_templates/show.html.erb
+++ b/app/views/like_templates/show.html.erb
@@ -12,13 +12,13 @@
       </div>
 
       <div class="col">
-        <a href="/my_likes/<%= @like.id %>/edit" class="btn btn-block btn-outline-secondary">
+        <a href="/my_likes/<%= @like.id %>/edit" class="btn btn-secondary">
           Edit like
         </a>
       </div>
 
       <div class="col">
-        <a href="/delete_like/<%= @like.id %>" class="btn btn-block btn-outline-secondary">
+        <a href="/delete_like/<%= @like.id %>" class="btn btn-secondary">
           Delete like
         </a>
       </div>
