fixed bug for comment associated with user

--- a/app/views/photo_templates/index.html.erb
+++ b/app/views/photo_templates/index.html.erb
@@ -79,7 +79,7 @@
 
   <!--hidden input for user_id-->
 
-    <input type="hidden" name="user_id" value="<%=photo.user_id%>">
+    <input type="hidden" name="user_id" value="<%=current_user.id%>">
 
 </form>
     
